--- a/nlb-service.yaml
+++ b/nlb-service.yaml
@@ -9,6 +9,7 @@ metadata:
   annotations:
     # by default the type is elb (classic load balancer).
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
+    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
 spec:
   # this setting is to make sure the source IP address is preserved.
   externalTrafficPolicy: Local
